???? 0.8.10

    user visible changes, client:
    * Fixed: COPY_TOOL set to xcopy was ignored (WinXP).
    * Solved weird problems with xcopy. The /EXCLUDE option of xcopy cannot except a file with space it's path,
        nor will it except a quoted path. So the excludes file is copied to each and every target folder
        during the copy stage.

    user visible changes, admin:
    * More concise messages for create-links and up2s3

    programmer visible changes:
    * Moved the initialization of copytool to after reading the main yaml file.
    * Fixed: Some inconsitancies in CopyTool_win_xcopy commands.
    * New variables: XCOPY_EXCLUDE_FILE_NAME, XCOPY_EXCLUDE_FILE_PATH to overcome xcopy limitations.
    * New copy tools methods begin_copy_folder, end_copy_folder  to overcome xcopy limitations.

5/3/2014 0.8.9 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * create-folders, unwtar and check-checksum are now done as internal instl commands instead of relying on external utilities.
    * During unwtar if .wtar.aa file is joined, .wtar.done file is removed.
    * New command create-folders will create folders for sync according to the to_sync_info_map.txt.
    * New command check-checksum will check checksums according to the to_sync_info_map.txt.
    * InstlMisc commands report execution time.
    * Windows: robocopy copy_dir_to_dir has /PURGE parameter so that redundant files in the target will be removed.
    * Mac: rsync copy_dir_to_dir has --delete parameter so that redundant files in the target will be removed.

    user visible changes, admin:
    * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
    * up2s3 will upload up to the latest repo revision and not up to BASE_REPO_REV.
    * Options --start-progress and --total-progress become optional (for commands that accept them). Not supplying means there will be no progress report.