@@ -6,9 +6,9 @@ INFO_MAP_FILE_URL: $(SYNC_BASE_URL)/$(REPO_REV)/instl/info_map.txt
 
 PARALLEL_SYNC: 16
 CURL_CONFIG_FILE_NAME: curl-config.txt
-CURL_CONNECT_TIMEOUT: 12
-CURL_MAX_TIME: 360
-CURL_RETRIES: 12
+CURL_CONNECT_TIMEOUT: 6
+CURL_MAX_TIME: 180
+CURL_RETRIES: 6
 
 LOCAL_BOOKKEEPING_PATH: $(LOCAL_SYNC_DIR)/bookkeeping
 HAVE_INFO_MAP_PATH: $(LOCAL_BOOKKEEPING_PATH)/have_info_map.txt
